Example_replicas/namespace_replicas.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-replicas
  labels:
    environment: replicas
