Example_replicas/nginx_deploy_replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kubilab-replicas
  labels:
    environment: kubilab
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
